# Pathfinding

./: .gitignore  CMakeLists.txt  README.md
AIDemo/include/: AABB.h  Actor.h  Config.h  Config.h.in  Demo.h  NPC.h  PathfindingAStar.h  Player.h  Ray.h  Texture.h  Vec2.h  Wall.h  Window.h  World.h
AIDemo/src/: Actor.cpp  Demo.cpp  Main.cpp  NPC.cpp  PathfindingAStar.cpp  Player.cpp  Ray.cpp  Texture.cpp  Wall.cpp  Window.cpp  World.cpp
lib/Debug/: SDL2.lib  SDL2main.lib
lib/Release/: SDL2.lib  SDL2main.lib
